--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div id="notes"></div>
         <div id="color-tooltip">
-            <div class="color-option" data-color="#fff" id="white"></div>
+            <div class="color-option" data-color="#202124" id="default"></div>
             <div class="color-option" data-color="#d7aefb" id="purple"></div>
             <div class="color-option" data-color="#fbbc04" id="orange"></div>
             <div class="color-option" data-color="#a7ffeb" id="teal"></div>
